Expand concurrent GC assertion to accept JSValue() or 0 https://bugs.webkit.org/show_bug.cgi?id=186855

Reviewed by Mark Lam.

We tend to set unused property slots to either JSValue() or 0
depending on the context. On 64-bit these are the same but on
32-bit JSValue() has a NaN tag. This patch makes it so we
the accept either JSValue() or 0.

* runtime/JSObjectInlines.h:
(JSC::JSObject::prepareToPutDirectWithoutTransition):


Canonical link: https://commits.webkit.org/202118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233018 268f45cc-cd09-0410-ab3c-d52691b4dbfc